completed the functionality of the game. added listener to new game button, and listener to the hold button

--- a/style.css
+++ b/style.css
@@ -142,6 +142,15 @@
     outline: none;
   }
 
+  .player--winner {
+    background-color: #0cb43c;
+  }
+  
+  .player--winner .name {
+    font-weight: 700;
+    color: #a7ec1f;
+  }
+
   .hidden {
     display: none;
   }
